Slight change to nac bar font size on smaller screen and small fix to atheist.

--- a/style.css
+++ b/style.css
@@ -414,6 +414,12 @@ ul {
     }
 }
 
+@media only screen and (max-width: 430px){
+    .nav-bar a {
+        font-size: 14px;
+    }
+}
+
 @media only screen and (max-width: 378px){
     .all .token {
         max-width: 75px;
